Fix structure: wrapped h2 and p inside column divs

--- a/css/style.css
+++ b/css/style.css
@@ -576,7 +576,7 @@ p {
 }
 
 .nav-collapse li a:hover {
-  color: #5446db;
+  color: #b40600;
   transform: scale(1.05);
 }
 
